--- a/src/layouts/header.css
+++ b/src/layouts/header.css
@@ -43,6 +43,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 .app-container {
@@ -56,7 +57,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 2rem;
+    padding: 7px;
+    padding-right: 20px;
+    padding-left: 20px;
     background-color: var(--header-bg);
     border-bottom: 1px solid var(--header-border);
     box-shadow: 0 1px 3px 0 var(--header-shadow);
@@ -175,6 +178,22 @@ header nav a:hover {
     margin-right: -1rem;
 }
 
+.theme-image {
+    height: 24px;
+    width: 24px;
+    object-fit: contain;
+    transition: transform 0.5s cubic-bezier(.68,-0.55,.27,1.55), filter 0.3s;
+    
+}
+/* .theme-toggle:active .theme-image {
+    transform: rotate(360deg) scale(1.2);
+} */
+
+.theme-toggle:hover .theme-image {
+    filter: drop-shadow(0 0 8px #B58E5A);
+    transform: scale(1.1);
+}
+
 
 @media (max-width: 768px) {
     .header {
@@ -198,6 +217,8 @@ header nav a:hover {
         padding: 1rem;
     }
 }
+
+
 
 @media (max-width: 480px) {
     .header nav ul {
