--- a/src/App.css
+++ b/src/App.css
@@ -44,27 +44,111 @@
 }
 
 .modal::backdrop {
-  background: rgba(0, 0, 0, 0.5);
+  background: transparent;
+  transition: background 0.4s ease;
+}
+
+.modal[open]::backdrop {
+  background: rgba(56, 56, 56, 0.5);
+}
+.modal.closing::backdrop {
+  background: transparent;
 }
 
 .modal {
-  max-width: 20rem;
-  padding: 2rem;
+  max-width: 40rem;
+  padding: 2.5rem;
   border: 0;
   border-radius: 8px;
-  position: relative;
-  box-shadow: hsl(0 0% 0% / 10%) 0 0 0.5rem 0.25rem;
+  box-shadow: rgba(0, 0, 0, 0.5) 0 0 0.5rem 0.25rem;
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
   z-index: 1000;
   
 }
 
+.modal[open] {
+  animation: modal-in 0.4s cubic-bezier(0.22, 0.61, 0.36, 1) forwards;
+}
+
+.modal.closing {
+  animation: modal-out 0.4s cubic-bezier(0.22, 0.61, 0.36, 1) forwards;
+}
+
+@keyframes modal-in {
+  0% { 
+    transform: translate(-50%, -48%); 
+    opacity: 0; 
+  }
+  100% { 
+    transform: translate(-50%, -50%); 
+    opacity: 1; 
+  }
+}
+
+@keyframes modal-out {
+  0% { 
+    transform: translate(-50%, -50%); 
+    opacity: 1; 
+  }
+  100% { 
+    transform: translate(-50%, -52%); 
+    opacity: 0; 
+  }
+}
+
 .modal-close-btn {
-  font-size: 0.75em;
   position: absolute;
-  top: 0.25em;
-  right: 0.25em;
+  top: 0.75rem;
+  right: 0.75rem;
+
+  width: 2rem;
+  height: 2rem;
+  padding: 0.25rem;
+
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  display: flex;
+  align-self: center;
+  justify-content: center;
+  
+}
+
+.modal-close-btn svg {
+  width: 1.25rem;
+  height: 1.25rem;
+  stroke-width: 2.5;
+}
+
+.modal-close-btn:hover {
+  background: #000000;
+  transform: scale(1.1);
+  outline: 2px solid #f8b344;
+}
+
+/* @keyframes modal-in {
+  0% { transform: translate(-50%, -48%); opacity: 0; }
+  100% { transform: translate(-50%, -50%); opacity: 1; }
+}
+
+@keyframes modal-out {
+  0% { transform: translate(-50%, -50%); opacity: 1; }
+  100% { transform: translate(-50%, -48%); opacity: 0; }
+  
+} */
+
+/* .modal[open] {
+  animation: modal-in 0.4s cubic-bezier(0.22, 0.61, 0.36, 1);
+}
+
+.modal.closing {
+  animation: modal-out 0.4s cubic-bezier(0.22, 0.61, 0.36, 1);
+} */
+
+/* Close button micro-interaction */
+.modal-close-btn:active {
+  transform: scale(0.95);
 }
