feat: implement authentication with Firebase in Login and Register components, added some input styling

--- a/src/index.css
+++ b/src/index.css
@@ -143,6 +143,10 @@ button:focus-visible {
   min-width: 100px;
 }
 
+form {
+  margin-top: 30px;
+  gap: 2rem;
+}
 
 .container {
   display: flex;
