--- a/src/index.css
+++ b/src/index.css
@@ -143,9 +143,22 @@ button:focus-visible {
   min-width: 100px;
 }
 
-form {
-  margin-top: 30px;
-  gap: 2rem;
+.form-content  {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  margin-top: 20px;
+  margin-left: 50px;
+  width: 35%;
+}
+
+
+.auth-form {
+  background: rgba(255,255,255,0.15);
+  backdrop-filter: blur(8px);
+  border-radius: 16px;
+  padding: 2rem;
+  box-shadow: 0 4px 32px rgba(0,0,0,0.15);
 }
 
 .container {
