--- a/src/index.css
+++ b/src/index.css
@@ -150,6 +150,7 @@ button:focus-visible {
   align-items: center;
   justify-content: center;
   width: 100%;
+  flex-wrap: wrap;
 }
 
 .container:hover > .card:not(:hover) {
