--- a/src/components/Input/input.css
+++ b/src/components/Input/input.css
@@ -15,7 +15,7 @@
 }
 
 .input-container input {
-  padding: 1rem 1.20rem;
+  padding: 0.95rem;
   border: 1px solid var(--text-secondary);
   border-radius: 12px;
   background-color: var(--button-bg);
