--- a/src/index.css
+++ b/src/index.css
@@ -150,16 +150,16 @@ button:focus-visible {
   align-items: center;
   justify-content: center;
   width: 100%;
-  padding-left: 70px;
+  padding-left: 80px;
 }
 
-.container:hover > .card:not(:hover) {
-    filter: brightness(0.9);
-    opacity: 0.6;
-    transition:
-    filter 0.3s cubic-bezier(.68,-0.55,.27,1.55),
-    opacity 0.3s cubic-bezier(.68,-0.55,.27,1.55),
-    transform 0.3s cubic-bezier(.68,-0.55,.27,1.55);
+.card:hover {
+    background-color: var(--accent-primary);
+    color: var(--text-primary);
+    transition: background-color 0.5s ease, transform 0.5s ease;
+    transform: translateY(-2px);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 1;
 }
 
 .scrollable-content {
@@ -197,7 +197,7 @@ button:focus-visible {
   background-color: var(--accent-primary);
   color: var(--text-primary); 
   border: none;
-  padding: 12px 24px;
+  padding: 10px 24px;
   font-size: 16px;
   border-radius: 8px;
   cursor: pointer;
@@ -208,4 +208,12 @@ button:focus-visible {
 .add-card-btn:hover {
   background-color: var(--accent-hover);
   transform: translateY(-2px);
+}
+
+.plus-icon {
+  width: 20px;
+  height: 20px;
+  padding-top: 5px;
+  fill: var(--text-primary);
+  transition: transform 0.3s ease;
 }
