--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -57,11 +57,9 @@
   position: absolute;
   top: 0.75rem;
   right: 0.75rem;
-
   width: 2rem;
   height: 2rem;
   padding: 0.25rem;
-
   border: none;
   border-radius: 8px;
   cursor: pointer;
@@ -79,8 +77,8 @@
 }
 
 .modal-close-btn:hover {
-  background: #000000;
-  transform: scale(1.1);
+  background: var(--accent-primary);
+  transform: scale(1);
   outline: 2px solid #f8b344;
 }
 
