--- a/src/index.css
+++ b/src/index.css
@@ -114,7 +114,7 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 1px solid var(--accent-primary);
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
@@ -124,7 +124,7 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
   margin: 4px;
-  
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);  
 }
 button:hover {
   border-color: var(--accent-primary);
@@ -139,18 +139,29 @@ button:focus-visible {
   padding: 20px;
   margin: 20px;
   border-radius: 10px;
-  max-width: 400px;
   min-width: 100px;
+  transition: 
+    transform 0.6s cubic-bezier(.68,-0.55,.27,1.55),
+    box-shadow 0.6s cubic-bezier(.68,-0.55,.27,1.55),
+    opacity 0.6s cubic-bezier(.68,-0.55,.27,1.55),
+    background-color 0.6s cubic-bezier(.68,-0.55,.27,1.55),
+    color 0.6s cubic-bezier(.68,-0.55,.27,1.55);
 }
 
 
 .container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   align-items: center;
   justify-content: center;
   width: 100%;
-  padding-left: 80px;
+  gap: 10px;
+  transition: opacity 0.3s cubic-bezier(.68,-0.55,.27,1.55);
+}
+
+layout-fade {
+  opacity: 0;
+  pointer-events: none;
 }
 
 .card:hover {
@@ -216,4 +227,26 @@ button:focus-visible {
   padding-top: 5px;
   fill: var(--text-primary);
   transition: transform 0.3s ease;
+}
+
+.grid-layout {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  gap: 10px;
+}
+
+.list-layout {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: stretch;
+  gap: 8px
+}
+
+.grid-layout .card {
+  transform: scale(1) rotate(0deg);
+}
+
+.list-layout .card {
+  transform: scale(0.95) scale(1);
 }
