--- a/src/layouts/header.css
+++ b/src/layouts/header.css
@@ -198,12 +198,11 @@ header nav a:hover {
 @media (max-width: 768px) {
     .header {
         flex-direction: column;
-        gap: 1rem;
-        padding: 1rem;
+        gap: 10px;
+        padding: 10px;
     }
 
     .header-content {
-        width: 100%;
         justify-content:space-around;
     }
 
